# cppStart

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cppStart.sln  cppStart.vcxproj  main.cpp
cppStart/x64/Debug/: cppStart.exe.recipe  cppStart.ilk  vc143.idb
cppStart/x64/Debug/cppStart.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cppStart.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
